--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="75dp"
     android:orientation="horizontal"
-    android:background="@drawable/item_background">
+    android:background="@drawable/item_background"
+    android:layout_marginBottom="6dp">
 
     <LinearLayout
         android:layout_width="275dp"
@@ -34,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="지영이랑 안드 회의"
-                android:textSize="17sp"></TextView>
+                android:textSize="15sp"></TextView>
 
             <TextView
                 android:id="@+id/item_day"
@@ -42,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:text="(요일)"
-                android:textSize="17sp"></TextView>
+                android:textSize="15sp"></TextView>
 
 
         </LinearLayout>
@@ -51,21 +52,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="45dp"
-            android:layout_marginTop="15dp">
+            android:layout_marginTop="5dp">
 
             <TextView
                 android:id="@+id/item_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="7~7:30"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
             <TextView
                 android:id="@+id/item_place"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:text="각자 집에서"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
 
         </LinearLayout>
 
