--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,103 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     tools:context=".MainFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginRight="11dp"
+        android:layout_marginBottom="10dp"
+        android:text="To-Do"
+        android:textColor="#079E90"
+        android:textSize="33sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintEnd_toStartOf="@+id/showDate"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:layout_marginLeft="60dp"
-            android:text="To-Do"
-            android:textColor="#079E90"
-            android:textSize="33sp"/>
-
-        <TextView
-            android:id="@+id/showDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="70dp"
-            android:text="이곳에 날짜가 표시됨."/>
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/showDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="15dp"
+        android:text="이곳에 날짜가 표시됨."
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView" />
 
 
     <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="50dp"
-        android:background="@drawable/one_line"/>
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="25dp"
+        android:background="@drawable/one_line"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
     <!-- 투두/루틴 리스트들 들어갈 자리-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="410dp"
-        android:layout_marginTop="25dp">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="370dp"
-            android:layout_height="380dp"
-            android:layout_marginLeft="23dp" />
 
-    </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="360dp"
+        android:layout_height="400dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
 
     <!-- 여기서부터 투두/루틴 버튼 만들 자리-->
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="79dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="15dp"
         android:orientation="horizontal"
-        android:layout_margin="15dp"
-        android:layout_marginBottom="5dp">
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
+        tools:layout_editor_absoluteX="0dp">
+
 
         <Button
             android:id="@+id/routine_add_btn"
-            android:layout_width="wrap_content"
+            android:layout_width="170dp"
             android:layout_height="70dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
 
-            android:layout_weight="1"
+            android:layout_marginStart="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/main_round_btn"
             android:drawableLeft="@drawable/plus_btn_small"
             android:fontFamily="@font/nanumsquareroundr"
             android:paddingLeft="18dip"
             android:text="루틴 추가하기"
             android:textColor="@color/black"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/todo_add_btn"
+            app:layout_constraintEnd_toStartOf="@+id/todo_add_btn"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/todo_add_btn"
-            android:layout_width="wrap_content"
+            android:layout_width="169dp"
             android:layout_height="70dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
 
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginBottom="86dp"
             android:background="@drawable/main_round_btn"
             android:backgroundTint="#DCF4EC"
             android:drawableLeft="@drawable/plus_btn_small"
             android:paddingLeft="18dip"
             android:text="할일 추가하기"
             android:textColor="@color/black"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/routine_add_btn"
+            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+
 
     </LinearLayout>
-
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
