Edit design item add dialogs

--- a/app/src/main/res/layout/todo_add_dialog.xml
+++ b/app/src/main/res/layout/todo_add_dialog.xml
@@ -48,8 +48,7 @@
             android:layout_marginLeft="30dp"
             android:layout_gravity="center"
             android:text="할일 이름"
-            android:textStyle="bold"
-            android:textColor="#232323"/>
+            android:textColor="#5E5E5E"/>
 
         <EditText
             android:id="@+id/todo_title"
@@ -74,9 +73,8 @@
             android:layout_marginLeft="30dp"
             android:layout_gravity="center"
             android:text="시간"
-            android:textStyle="bold"
             android:textAlignment="center"
-            android:textColor="#232323"/>
+            android:textColor="#5E5E5E"/>
 
         <TextView
             android:id="@+id/todo_time"
@@ -102,9 +100,8 @@
             android:layout_marginLeft="30dp"
             android:layout_gravity="center"
             android:text="장소"
-            android:textStyle="bold"
             android:textAlignment="center"
-            android:textColor="#232323"/>
+            android:textColor="#5E5E5E"/>
 
         <EditText
             android:id="@+id/todo_place"
@@ -123,12 +120,13 @@
 
         <Button
             android:id="@+id/todoAdd_ok"
-            android:layout_width="100dp"
+            android:layout_width="130dp"
             android:layout_height="53dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="145dp"
+            android:layout_marginLeft="115dp"
+            android:backgroundTint="#189B75"
             android:text="완료"
-            android:backgroundTint="#189B75"/>
+            android:textColor="#ffffff" />
 
     </LinearLayout>
 </LinearLayout>
