--- a/app/src/main/res/drawable/edittext_blank.xml
+++ b/app/src/main/res/drawable/edittext_blank.xml
@@ -10,7 +10,7 @@
             <!-- 배경색 -->
             <solid android:color="#FBFAFA" />
             <!-- 라인색 및 두께 -->
-            <stroke android:width="1dp" android:color="#5A5A5A"/>
+            <stroke android:width="1dp" android:color="#FFF7F7"/>
         </shape>
     </item>
 
