--- a/app/src/main/res/layout/routine_add_dialog.xml
+++ b/app/src/main/res/layout/routine_add_dialog.xml
@@ -47,8 +47,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="0dp"
             android:text="루틴 이름"
-            android:textColor="#232323"
-            android:textStyle="bold" />
+            android:textColor="#5E5E5E" />
 
         <EditText
             android:id="@+id/rtn_title"
@@ -70,17 +69,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="40dp"
             android:layout_marginTop="0dp"
             android:text="요일"
-            android:textColor="#232323"
-            android:textStyle="bold" />
+            android:textColor="#5E5E5E" />
 
         <LinearLayout
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:orientation="vertical"
-            android:layout_marginLeft="60dp"
+            android:layout_marginLeft="50dp"
             android:layout_gravity="center"
             android:background="@drawable/edittext_blank">
 
@@ -208,18 +206,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="40dp"
             android:layout_marginTop="0dp"
             android:text="시간"
-            android:textColor="#232323"
-            android:textStyle="bold" />
+            android:textColor="#5E5E5E" />
 
         <TextView
             android:id="@+id/rtn_time"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="60dp"
+            android:layout_marginLeft="50dp"
             android:background="@drawable/edittext_blank" />
 
     </LinearLayout>
@@ -234,18 +231,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="40dp"
             android:layout_marginTop="0dp"
             android:text="장소"
-            android:textColor="#232323"
-            android:textStyle="bold" />
+            android:textColor="#5E5E5E" />
 
         <EditText
             android:id="@+id/rtn_place"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="60dp"
+            android:layout_marginLeft="50dp"
             android:background="@drawable/edittext_blank" />
 
     </LinearLayout>
@@ -257,12 +253,13 @@
 
         <Button
             android:id="@+id/rtn_add_ok"
-            android:layout_width="120dp"
+            android:layout_width="130dp"
             android:layout_height="53dp"
             android:layout_gravity="center"
             android:layout_marginLeft="135dp"
             android:backgroundTint="#189B75"
-            android:text="완료" />
+            android:text="완료"
+            android:textColor="#ffffff"/>
 
     </LinearLayout>
 </LinearLayout>
