--- a/app/src/main/res/layout/routines_item.xml
+++ b/app/src/main/res/layout/routines_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="120dp"
     android:orientation="vertical"
     android:layout_marginLeft="15dp"
+    android:layout_marginBottom="15dp"
     android:background="@drawable/item_background">
 
     <TextView
