Routine_Fragment 오류 주석 수정

--- a/app/src/main/res/layout/routines_item.xml
+++ b/app/src/main/res/layout/routines_item.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
-        android:text="루틴 제목1"
+        android:text="왜 안바뀌니..?"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
