--- a/app/src/main/res/layout/fragment_routine_.xml
+++ b/app/src/main/res/layout/fragment_routine_.xml
@@ -26,8 +26,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/routines_recyclerview"
         android:layout_width="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_height="490dp" />
+        android:layout_height="490dp"
+        android:layout_marginTop="20dp" />
 
 
 </LinearLayout>
